# safeclaw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  clone-private.sh  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  intents.yaml
src/safeclaw/: __init__.py  __main__.py  cli.py
src/safeclaw/actions/: __init__.py  base.py  blog.py  briefing.py  calendar.py  crawl.py  email.py  files.py  news.py  reminder.py  shell.py  summarize.py  weather.py
src/safeclaw/channels/: __init__.py  base.py  cli.py  telegram.py
src/safeclaw/core/: __init__.py  ai_writer.py  analyzer.py  blog_publisher.py  crawler.py  documents.py  engine.py  feeds.py  frontpage.py  i18n.py  memory.py  nlp.py  notifications.py  parser.py  scheduler.py  summarizer.py  vision.py
src/safeclaw/plugins/: __init__.py  base.py  loader.py
src/safeclaw/plugins/community/: device_discovery.py  easter_eggs.py  piper_tts.py  social_monitor.py  whisper_stt.py
src/safeclaw/plugins/official/: smarthome.py
src/safeclaw/triggers/: __init__.py  webhook.py
tests/: test_multilingual.py  test_security.py
tldr-feed/: LICENSE  README.md  pyproject.toml
tldr-feed/src/tldr_feed/: __init__.py  cli.py  summarizer.py
tldr-feed/tests/: test_summarizer.py
