[project]
name = "tldr-feed"
version = "0.1.0"
description = "Paste a URL, get a summary. No AI, just math."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "tldr-feed contributors"}]
keywords = ["summarizer", "tldr", "extractive", "cli", "no-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "sumy>=0.11.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
tldr-feed = "tldr_feed.cli:run"

[project.urls]
Homepage = "https://github.com/tldr-feed/tldr-feed"
Repository = "https://github.com/tldr-feed/tldr-feed"
Issues = "https://github.com/tldr-feed/tldr-feed/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tldr_feed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
